[gd_scene load_steps=3 format=3 uid="uid://ycitmgy4olxo"]

[ext_resource type="Script" path="res://scripts/hud (2).gd" id="1_0tkde"]
[ext_resource type="FontFile" uid="uid://cv5hlxcelgkow" path="res://Scenes/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="2_s3wh2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0tkde")

[node name="Message" type="Label" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -64.0
offset_right = 204.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_s3wh2")
theme_override_font_sizes/font_size = 40
text = "A RECOLECTAR FÃ“SILES"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -36.0
offset_right = 136.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_s3wh2")
theme_override_font_sizes/font_size = 64
text = "START"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
